--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule ".emacs.d/extern/magit"]
 	path = .emacs.d/extern/magit
 	url = git://github.com/magit/magit.git
+[submodule ".emacs.d/extern/smarttabs"]
+	path = .emacs.d/extern/smarttabs
+	url = https://github.com/jcsalomon/smarttabs.git
