--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule ".emacs.d/extern/smarttabs"]
 	path = .emacs.d/extern/smarttabs
 	url = https://github.com/jcsalomon/smarttabs.git
+[submodule ".emacs.d/extern/auto-complete"]
+	path = .emacs.d/extern/auto-complete
+	url = https://github.com/m2ym/auto-complete.git
