--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule ".emacs.d/extern/auto-complete"]
 	path = .emacs.d/extern/auto-complete
 	url = https://github.com/m2ym/auto-complete.git
+[submodule ".emacs.d/extern/popup"]
+	path = .emacs.d/extern/popup
+	url = https://github.com/m2ym/popup-el.git
