Stop displaying machine statistics in the name of performance

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -42,7 +42,7 @@ set -g mouse-select-window on
 set -g mouse-resize-pane on
 
 # Refresh the status every second
-set -g status-interval 1
+#set -g status-interval 1
 
 # MOAR Scrollback
 set -g history-limit 16284
@@ -57,13 +57,13 @@ set -g status-justify left
 set -g status-left-length 30
 
 set -g status-left '#[fg=cyan,dim][#S]#[fg=green]'
-set -ag status-left '[#(cat /proc/loadavg | cut -d" " -f1,4)]'
-set -ag status-left "#[fg=red,bright][#(free -g | awk 'NR==3 {print \$4};')Gb]"
+#set -ag status-left '[#(cat /proc/loadavg | cut -d" " -f1,4)]'
+#set -ag status-left "#[fg=red,bright][#(free -g | awk 'NR==3 {print \$4};')Gb]"
 set -ag status-left '  '
 set -g status-right ''
 
 set -g message-bg blue
-set -g mode-bg blue 
+set -g mode-bg blue
 # Inactive windows in status bar
 setw -g window-status-bg "#222222"
 setw -g window-status-current-bg "#222222"
