--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule ".emacs.d/extern/puppet-syntax-emacs"]
 	path = .emacs.d/extern/puppet-syntax-emacs
 	url = https://github.com/puppetlabs/puppet-syntax-emacs.git
+[submodule ".oh-my-zsh"]
+	path = .oh-my-zsh
+	url = https://github.com/robbyrussell/oh-my-zsh.git
