Fix tmux for 1.9

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,13 +20,13 @@ bind-key 2 join-pane -v -s :!.
 bind-key @ split-window -v
 bind-key 3 join-pane -h -s :!.
 bind-key '#' split-window -h
-bind-key b command-prompt -p 'Which window pane?' -I '!.' 'swap-pane -s %%'
+bind-key b command-prompt -p 'Which window pane?' 'swap-pane -s %%'
 bind-key k confirm-before -p "kill-pane #P? (y/n)" kill-pane
 bind-key r source-file ~/.tmux.conf
 bind-key C-f new-window
 bind-key C-b list-panes -s
 bind-key a set synchronize-panes
-bind-key | pipe-pane -0 'cat >>~/.tmux.out/output.#I-#P'
+bind-key | pipe-pane -o 'cat >>~/.tmux.out/output.#I-#P'
 # '0' is at the wrong end of the keyboard
 set -g base-index 1
 
@@ -40,7 +40,7 @@ setw -g mode-mouse on
 set -g mouse-select-pane on
 set -g mouse-select-window on
 set -g mouse-resize-pane on
-awt -g mouse-utf8 on
+set -g mouse-utf8 on
 
 # Refresh the status every second
 #set -g status-interval 1
@@ -71,10 +71,10 @@ setw -ag window-status-format '#[fg=blue]:#[fg=red]#W'
 # Active
 setw -g window-status-current-format '#[bg=blue,fg=white,dim]#[fg=bright]#I.#P'
 setw -ag window-status-current-format '#[default]#[fg=blue,dim]:#[fg=cyan,bright]#W'
-
-# Alerted window in status bar. Windows which have an alert (bell, activity or content).
-setw -g window-status-alert-fg red
-setw -g window-status-alert-bg white
+# New content
+setw -g window-status-activity-style 'fg=green'
+# Bell alerts
+setw -g window-status-bell-style 'fg=red,bg=white'
 
 # border
 set -g pane-border-fg blue
