--- a/link/.gitconfig
+++ b/link/.gitconfig
@@ -13,3 +13,7 @@
 	wc = whatchanged
 [core]
 	editor = emacsclient -t --alternate-editor=''
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	required = true
