Add ability to change tmux default-dir

--- a/link/.tmux.conf
+++ b/link/.tmux.conf
@@ -3,6 +3,7 @@ set -g set-titles on
 set -g mode-keys emacs
 set -g status-keys emacs
 setw -g automatic-rename on
+setw -g renumber-windows on
 set -g exit-unattached off
 
 # 256 color
@@ -26,6 +27,8 @@ bind-key C-f new-window
 bind-key C-b list-panes -s
 bind-key a set synchronize-panes
 bind-key | pipe-pane -o 'cat >>~/.tmux.out/output.#I-#P'
+bind-key h  attach -c "#{pane_current_path}"
+
 # '0' is at the wrong end of the keyboard
 set -g base-index 1
 
