Let me switch github IDs

--- a/link/.gitconfig
+++ b/link/.gitconfig
@@ -11,6 +11,7 @@
 	ps = push
 	st = status
 	wc = whatchanged
+	identity = "! git config user.name \"$(git config user.$1.name)\"; git config user.email \"$(git config user.$1.email)\"; :"
 [core]
 	editor = emacsclient -t --alternate-editor=''
 [filter "lfs"]
@@ -19,3 +20,6 @@
 	required = true
 [status]
 	submoduleSummary = true
+[user "public"]
+	name = Keith Mosher
+	email = keith.mosher@gmail.com
