Set zsh as default tmux shell

--- a/link/.tmux.conf
+++ b/link/.tmux.conf
@@ -1,4 +1,4 @@
-#set -g default-shell /bin/zsh
+set -g default-shell /usr/bin/zsh
 set -g set-titles on
 set -g mode-keys emacs
 set -g status-keys emacs
