--- a/link/.tmux.conf
+++ b/link/.tmux.conf
@@ -1,5 +1,5 @@
-set -g default-shell /usr/bin/zsh
-set -g default-command /usr/bin/zsh
+set -g default-shell /opt/homebrew/bin/zsh
+set -g default-command /opt/homebrew/bin/zsh
 set -g set-titles on
 set -g mode-keys emacs
 set -g status-keys emacs
